# src/modules/faq/faq.controller.ts
@@ -1,0 +1,34 @@
+import { Controller, Get, Post, Body, Put, Param, Delete } from '@nestjs/common';
+import { FaqService } from './faq.service';
+import { CreateFaqDto } from './dto/create-faq.dto';
+import { UpdateFaqDto } from './dto/update-faq.dto';
+
+@Controller('faq')
+export class FaqController {
+  constructor(private readonly faqService: FaqService) {}
+
+  @Post()
+  create(@Body() createFaqDto: CreateFaqDto) {
+    return this.faqService.create(createFaqDto);
+  }
+
+  @Get()
+  findAll() {
+    return this.faqService.findAll();
+  }
+
+  @Get(':id')
+  findOne(@Param('id') id: string) {
+    return this.faqService.findOne(+id);
+  }
+
+  @Put(':id')
+  update(@Param('id') id: string, @Body() updateFaqDto: UpdateFaqDto) {
+    return this.faqService.update(+id, updateFaqDto);
+  }
+
+  @Delete(':id')
+  remove(@Param('id') id: string) {
+    return this.faqService.remove(+id);
+  }
+}
