# src/modules/faq/faq.entity.ts
@@ -1,0 +1,13 @@
+import { Entity, PrimaryGeneratedColumn, Column } from 'typeorm';
+
+@Entity()
+export class Faq {
+  @PrimaryGeneratedColumn()
+  id: number;
+
+  @Column()
+  tieuDe: string;
+
+  @Column()
+  noiDung: string;
+}
